feat: refactor code
- Added separate validator classes for model.
- Added Lombok.
- Warning: application doesn't work after refactoring.