@@ -1,21 +1,37 @@
 package io.allitov.rbac.model.role;
 
-import java.util.Collections;
+import io.allitov.rbac.model.validator.Validator;
+import io.allitov.rbac.model.validator.impl.RoleValidator;
 import java.util.HashSet;
-import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
+import lombok.AccessLevel;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
+import lombok.ToString;
 
+@Data
+@RequiredArgsConstructor(access = AccessLevel.PRIVATE)
+@EqualsAndHashCode(onlyExplicitlyIncluded = true)
 public class Role {
 
+    @Getter(AccessLevel.NONE)
+    @ToString.Exclude
+    private static final Validator<Role> VALIDATOR = new RoleValidator();
+
+    @EqualsAndHashCode.Include
     private final String id = "role_" + UUID.randomUUID();
+
     private final String name;
     private final String description;
     private final Set<Permission> permissions = new HashSet<>();
 
-    public Role(String name, String description) {
-        this.name = name;
-        this.description = description;
+    public static Role of(String name, String description) {
+        Role newRole = new Role(name, description);
+        VALIDATOR.validate(newRole);
+        return newRole;
     }
 
     public void addPermission(Permission permission) {
@@ -34,52 +50,17 @@ public class Role {
         return permissions.stream().anyMatch(permission -> permission.matches(permissionName, resource));
     }
 
-    @Override
-    public boolean equals(Object o) {
-        if (o == null || getClass() != o.getClass()) {
-            return false;
-        }
-        Role role = (Role) o;
-        return Objects.equals(id, role.id);
-    }
-
-    @Override
-    public int hashCode() {
-        return Objects.hashCode(id);
-    }
-
-    @Override
-    public String toString() {
-        return "Role{" + "id='"
-                + id + '\'' + ", name='"
-                + name + '\'' + ", description='"
-                + description + '\'' + ", permissions="
-                + permissions + '}';
-    }
-
     public String format() {
         StringBuilder sb = new StringBuilder();
-        sb.append(String.format("Role: %s [ID: %s]%n", name, id));
-        sb.append(String.format("Description: %s%n", description));
-        sb.append(String.format("Permissions: (%s):%n", permissions.size()));
-        permissions.forEach(p -> sb.append(String.format("\t- %s%n", p.format())));
+        sb.append("Role: %s [ID: %s]%n".formatted(name, id));
+        sb.append("Description: %s%n".formatted(description));
+        sb.append("Permissions: (%s):%n".formatted(permissions.size()));
+        permissions.forEach(p -> sb.append("\t- %s%n".formatted(p.format())));
 
         return sb.toString();
     }
 
-    public String getId() {
-        return id;
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public String getDescription() {
-        return description;
-    }
-
     public Set<Permission> getPermissions() {
-        return Collections.unmodifiableSet(permissions);
+        return Set.copyOf(permissions);
     }
 }
